--- a/autodj/sc_trans.conf
+++ b/autodj/sc_trans.conf
@@ -19,15 +19,15 @@
 PlaylistFile=example.lst
 
 ; ServerIP/ServerPort are the target server to send to
-ServerIP=80.211.141.196
+ServerIP=xxx.xxx.xxx.xxx your IP
 ServerPort=8000
 
 ; Password is the password on the sc_serv you're sending to.
-Password=Bilabong123
+Password=yourpassword
 ; StreamTitle/URL/Genre define the data that appears on the directory and in the
 ; stream info.
-StreamTitle=Mbah Shondong
-StreamURL=http://www.mbahshondong.com
+StreamTitle=radio airdrop
+StreamURL=http://www.airdrop.com
 Genre=Techno, House, Club
 
 ; Logfile optionally denotes a text file to log sc_trans to.  a kill -HUP
