--- a/radio/sc_serv.conf
+++ b/radio/sc_serv.conf
@@ -26,7 +26,7 @@ MaxUser=1000
 ; consist of only letters and numbers, and is the same server your broadcaster
 ; will need to enter in the SHOUTcast Source Plug-in for Winamp.  THIS VALUE
 ; CANNOT BE BLANK.
-Password=Bilabong123
+Password=yourpassword
 
 ; PortBase. This is the IP port number your server will run on.  The
 ; value, and the value + 1 must be available.  If you get a fatal error when
@@ -126,7 +126,7 @@ NameLookups=0
 ; Set RelayPort to 0, RelayServer to empty, or just leave these commented
 ; out to disable relay mode.
 ; RelayPort=8000
-; RelayServer=192.168.1.58
+; RelayServer=xxx.xxx.xxx.xxx your IP
 
 ; ***************************
 ; Server configuration
@@ -140,7 +140,7 @@ NameLookups=0
 ; will grant the right to kick, ban, and specify reserve hosts.
 ; The default is undefined (Password allows control for both 
 ; source and admin)
-AdminPassword=Bilabong123
+AdminPassword=yourpassword
 
 ; AutoDumpUsers controls whether listeners are disconnected if the source
 ; stream disconnects. The default is 0.
